tests/invalid/runtime/index_get_string_oob_combining.pts
function main() : void {
    string s = "é";
    glyph g = s[2];
    Sys.print(g.toString());
}
